--- a/package.json
+++ b/package.json
@@ -18,26 +18,26 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^8.5.8",
-    "@types/node": "^18.0.6",
-    "@types/triple-beam": "^1.3.2",
-    "@typescript-eslint/eslint-plugin": "^6.4.1",
-    "@typescript-eslint/parser": "^6.4.1",
+    "@types/express": "^4.17.23",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/node": "^18.19.120",
+    "@types/triple-beam": "^1.3.5",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^7.32.0",
     "npm-run-all": "^4.1.5",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.4.3"
+    "ts-node": "^10.9.2",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@lreading/ts-logger": "^1.0.11",
+    "@lreading/ts-logger": "^1.0.12",
     "class-transformer": "^0.5.1",
-    "jsonwebtoken": "9",
-    "jwks-rsa": "^2.0.5",
-    "logform": "^2.4.0",
-    "openapi-types": "^12.0.0",
-    "reflect-metadata": "^0.1.13",
-    "winston-transport": "^4.5.0"
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^2.1.5",
+    "logform": "^2.7.0",
+    "openapi-types": "^12.1.3",
+    "reflect-metadata": "^0.1.14",
+    "winston-transport": "^4.9.0"
   },
   "pnpm": {
     "overrides": {
